--- a/app/views/layouts/_navbar.html.slim
+++ b/app/views/layouts/_navbar.html.slim
@@ -12,7 +12,8 @@ nav.navbar.navbar-default
 
     #navbar.navbar-collapse.collapse
       ul.nav.navbar-nav.navbar-left
-        li = link_to 'Link'
+        li = link_to 'Kunden', customers_path
+        li = link_to 'Weine', wines_path
 
 
       ul.nav.navbar-nav.navbar-right
