--- a/app/views/customers/_form.html.slim
+++ b/app/views/customers/_form.html.slim
@@ -5,4 +5,4 @@
     = f.input :address, label: 'Adresse'
     = f.input :phone, label: 'Telefonnummer'
     = f.input :email, label: 'E-Mail'
-    = f.submit 'Save', class: 'btn btn-success'
+    = f.submit 'Speichern', class: 'btn btn-success'
