--- a/app/views/customers/edit.html.slim
+++ b/app/views/customers/edit.html.slim
@@ -5,10 +5,10 @@
   .btn-group.pull-right
     = link_to @customer, class: 'btn btn-primary' do
       span.glyphicon.glyphicon-info-sign
-      |  Show
+      |  Anzeigen
 
     = link_to customers_path, class: 'btn btn-default' do
       span.glyphicon.glyphicon-list-alt
-      |  Back
+      |  Zurück
 
 = render 'form'
