--- a/app/views/customers/index.html.slim
+++ b/app/views/customers/index.html.slim
@@ -1,10 +1,10 @@
 .page-header
   h1
-    | Listing customers
+    | Alle Kunden
 
   = link_to new_customer_path, class: 'btn btn-primary pull-right' do 
     span.glyphicon.glyphicon-plus
-    |  New Customer
+    |  Neuer Kunde
 
 /.table-responsive <-- use only this if you want your table responsive
 / however dropdowns wont work correctly anymore then
@@ -13,15 +13,15 @@
     thead
       tr
         th
-          | First name
+          | Vorname
         th
-          | Last name
+          | Nachname
         th
-          | Address
+          | Adresse
         th
-          | Phone
+          | Telefonnummer
         th
-          | Email
+          | E-Mail
         th
         th.hidden-sm.hidden-xs
         th.hidden-sm.hidden-xs
@@ -41,15 +41,15 @@
           td.hidden-sm.hidden-xs
             = link_to customer
               span.glyphicon.glyphicon-eye-open 
-              = ' Show'
+              = ' Anzeigen'
           td.hidden-sm.hidden-xs
             = link_to edit_customer_path(customer) 
               span.glyphicon.glyphicon-pencil
-              = ' Edit'  
+              = ' Bearbeiten'  
           td.hidden-sm.hidden-xs
-            = link_to customer, method: :delete, data: { confirm: 'Are you sure?' } 
+            = link_to customer, method: :delete, data: { confirm: 'Bist du sicher?' } 
               span.glyphicon.glyphicon-trash 
-              = ' Destroy'
+              = ' Löschen'
 
           td.visible-sm.visible-xs
             .dropdown
@@ -60,12 +60,12 @@
                 li
                   = link_to customer
                     span.glyphicon.glyphicon-eye-open 
-                    = ' Show'
+                    = ' Anzeigen'
                 li
                   = link_to edit_customer_path(customer) 
                     span.glyphicon.glyphicon-pencil
-                    = ' Edit'  
+                    = ' Bearbeiten'  
                 li
-                  = link_to customer, method: :delete, data: { confirm: 'Are you sure?' } 
+                  = link_to customer, method: :delete, data: { confirm: 'Bist du sicher?' } 
                     span.glyphicon.glyphicon-trash 
-                    = ' Destroy'
+                    = ' Löschen'
