--- a/app/views/customers/new.html.slim
+++ b/app/views/customers/new.html.slim
@@ -1,10 +1,9 @@
 .page-header
   h1
-    | New 
-    | customer
+    | Neuer Kunde
 
   = link_to customers_path, class: 'btn btn-default pull-right' do 
     span.glyphicon.glyphicon-list-alt
-    |  Back 
+    |  Zurück 
 
 = render 'form'
