--- a/app/views/layouts/_navbar.html.slim
+++ b/app/views/layouts/_navbar.html.slim
@@ -14,6 +14,7 @@ nav.navbar.navbar-default
       ul.nav.navbar-nav.navbar-left
         li = link_to 'Kunden', customers_path
         li = link_to 'Weine', wines_path
+        li = link_to 'Bestellungen', orders_path
 
 
       ul.nav.navbar-nav.navbar-right
