Add search functionality for orders

--- a/app/views/orders/_form.html.slim
+++ b/app/views/orders/_form.html.slim
@@ -1,8 +1,12 @@
 = simple_form_for @order do |f|
   .col-sm-4
-    = f.input :customer_id, label: 'Kunde'
-    = f.input :wine_id, label: 'Wein'
+    = f.input :customer_name, as: :search, label: 'Kunde', input_html: { class: 'js-customer-search-field' }
+    = f.input :wine_name, as: :search, label: 'Wein', input_html: { class: 'js-wine-search-field' }
     = f.input :boxes, label: 'Kartons'
     = f.input :bottles, label: 'Flaschen'
     = f.input :shipped, label: 'Abgeschickt?'
     = f.submit 'Speichern', class: 'btn btn-success'
+    
+.col-sm-8
+  h4 Suchergebnisse
+  table.table.table-hover.js-search-result
