--- a/app/views/layouts/_navbar.html.slim
+++ b/app/views/layouts/_navbar.html.slim
@@ -15,6 +15,7 @@ nav.navbar.navbar-default
         li = link_to 'Kunden', customers_path
         li = link_to 'Weine', wines_path
         li = link_to 'Bestellungen', orders_path
+        li = link_to 'Listen drucken', pdf_index_path
 
 
       ul.nav.navbar-nav.navbar-right
