--- a/app/views/pdf/index.html.slim
+++ b/app/views/pdf/index.html.slim
@@ -5,3 +5,7 @@
 = link_to pdf_customers_path, class: 'btn btn-primary btn-lg' do
   span.glyphicon.glyphicon-user
   |  Kundenliste
+  
+= link_to pdf_orders_path, class: 'btn btn-primary btn-lg' do
+  span.glyphicon.glyphicon-list-alt
+  |  Offene Bestellungen
