--- a/app/views/orders/show.html.slim
+++ b/app/views/orders/show.html.slim
@@ -30,7 +30,7 @@ dl.dl-horizontal
   dt
     | Preis
   dd
-    = @order.full_price
+    = number_to_currency(@order.full_price, unit: '€')
   dt
     | Abgeschickt?:
   dd
