--- a/app/views/orders/index.html.slim
+++ b/app/views/orders/index.html.slim
@@ -50,7 +50,7 @@
           td
             = order.bottles
           td
-            = order.full_price
+            = number_to_currency(order.full_price, unit: '€')
           td
             - if order.shipped?
               span.glyphicon.glyphicon-ok
