--- a/app/views/layouts/_notice.html.slim
+++ b/app/views/layouts/_notice.html.slim
@@ -5,7 +5,7 @@
     a.close href='#' data-dismiss='alert' aria-label='close'
       | ×
 
-    = notice
+    = ' ' + notice
 
 - if alert
   p.alert.alert-danger
@@ -14,4 +14,4 @@
     a.close href='#' data-dismiss='alert' aria-label='close'
       | ×
 
-    = alert
+    = ' ' + alert
