Validation fixes and responsify

--- a/app/views/customers/index.html.slim
+++ b/app/views/customers/index.html.slim
@@ -1,71 +1,68 @@
-.page-header
-  h1
-    | Alle Kunden
 
-  = link_to new_customer_path, class: 'btn btn-primary pull-right' do 
-    span.glyphicon.glyphicon-plus
-    |  Neuer Kunde
+h1
+  | Alle Kunden
+  
+= link_to new_customer_path, class: 'btn btn-primary pull-right' do 
+  span.glyphicon.glyphicon-plus
+  |  Neuer Kunde
 
 /.table-responsive <-- use only this if you want your table responsive
 / however dropdowns wont work correctly anymore then
-.table-responsive [style="overflow-x: visible !important; overflow-y: visible !important;"]
-  table.table.table-striped.table-hover
-    thead
-      tr
-        th
-          | Vorname
-        th
-          | Nachname
-        th
-          | Adresse
-        th
-          | Telefonnummer
-        th
-          | E-Mail
-        th
-        th.hidden-sm.hidden-xs
-        th.hidden-sm.hidden-xs
-    tbody
-      - @customers.each do | customer |
+.col-sm-12
+  .table-responsive
+    table.table.table-striped.table-hover
+      thead
         tr
-          td
-            = customer.first_name
-          td
-            = customer.last_name
-          td
-            = customer.address
-          td
-            = customer.phone
-          td
-            = customer.email
-          td.hidden-sm.hidden-xs
-            = link_to customer
-              span.glyphicon.glyphicon-eye-open 
-              = ' Anzeigen'
-          td.hidden-sm.hidden-xs
-            = link_to edit_customer_path(customer) 
-              span.glyphicon.glyphicon-pencil
-              = ' Bearbeiten'  
-          td.hidden-sm.hidden-xs
-            = link_to customer, method: :delete, data: { confirm: 'Bist du sicher?' } 
-              span.glyphicon.glyphicon-trash 
-              = ' Löschen'
+          th
+            | Vorname
+          th
+            | Nachname
+          th
+            | Adresse
+          th
+            | Telefonnummer
+          th
+          th.hidden-sm.hidden-xs
+          th.hidden-sm.hidden-xs
+      tbody
+        - @customers.each do | customer |
+          tr
+            td
+              = customer.first_name
+            td
+              = customer.last_name
+            td
+              = customer.address
+            td
+              = customer.phone
+            td.hidden-sm.hidden-xs
+              = link_to customer
+                span.glyphicon.glyphicon-eye-open 
+                = ' Anzeigen'
+            td.hidden-sm.hidden-xs
+              = link_to edit_customer_path(customer) 
+                span.glyphicon.glyphicon-pencil
+                = ' Bearbeiten'  
+            td.hidden-sm.hidden-xs
+              = link_to customer, method: :delete, data: { confirm: 'Bist du sicher?' } 
+                span.glyphicon.glyphicon-trash 
+                = ' Löschen'
 
-          td.visible-sm.visible-xs
-            .dropdown
-              a.dropdown-toggle data-toggle='dropdown' aria-haspopup='true'
-                span.caret
+            td.visible-sm.visible-xs
+              .dropdown
+                a.dropdown-toggle data-toggle='dropdown' aria-haspopup='true'
+                  span.caret
 
-              ul.dropdown-menu.dropdown-menu-right
-                li
-                  = link_to customer
-                    span.glyphicon.glyphicon-eye-open 
-                    = ' Anzeigen'
-                li
-                  = link_to edit_customer_path(customer) 
-                    span.glyphicon.glyphicon-pencil
-                    = ' Bearbeiten'  
-                li
-                  = link_to customer, method: :delete, data: { confirm: 'Bist du sicher?' } 
-                    span.glyphicon.glyphicon-trash 
-                    = ' Löschen'
+                ul.dropdown-menu.dropdown-menu-right
+                  li
+                    = link_to customer
+                      span.glyphicon.glyphicon-eye-open 
+                      = ' Anzeigen'
+                  li
+                    = link_to edit_customer_path(customer) 
+                      span.glyphicon.glyphicon-pencil
+                      = ' Bearbeiten'  
+                  li
+                    = link_to customer, method: :delete, data: { confirm: 'Bist du sicher?' } 
+                      span.glyphicon.glyphicon-trash 
+                      = ' Löschen'
