--- a/app/views/orders/index.html.slim
+++ b/app/views/orders/index.html.slim
@@ -2,89 +2,81 @@
   h1
     | Alle Bestellungen
 
-  .btn-group-vertical.pull-right
-    = link_to new_order_path, class: 'btn btn-primary' do 
-      span.glyphicon.glyphicon-plus
-      |  Neue Bestellung
-    
-    - unless @only_open
-      = link_to orders_path(open: true), class: 'btn btn-default' do
-        span.glyphicon.glyphicon-record
-        |  Nur alle offenen anzeigen
-    
-    - else
-      = link_to orders_path, class: 'btn btn-default' do
-        span.glyphicon.glyphicon-record
-        |  Alle anzeigen
+  .btn-group-vertical.pull-right.hidden-xs
+    = render 'buttons'
+        
+  .btn-group-vertical.col-sm-12.visible-xs
+    = render 'buttons'
 
 /.table-responsive <-- use only this if you want your table responsive
 / however dropdowns wont work correctly anymore then
-.table-responsive [style="overflow-x: visible !important; overflow-y: visible !important;"]
-  table.table.table-striped.table-hover
-    thead
-      tr
-        th
-          | Kunde
-        th
-          | Wein
-        th
-          | Kartons
-        th
-          | Flaschen
-        th
-          | Preis
-        th
-          | Abgeschickt?
-        th
-        th.hidden-sm.hidden-xs
-        th.hidden-sm.hidden-xs
-    tbody
-      - @orders.each do | order |
+.col-sm-12
+  .table-responsive
+    table.table.table-striped.table-hover
+      thead
         tr
-          td
-            = order.customer.full_name
-          td
-            = order.wine.name
-          td
-            = order.boxes
-          td
-            = order.bottles
-          td
-            = number_to_currency(order.full_price, unit: '€')
-          td
-            - if order.shipped?
-              span.glyphicon.glyphicon-ok
-            - else
-              span.glyphicon.glyphicon-remove
+          th
+            | Kunde
+          th
+            | Wein
+          th
+            | Kartons
+          th
+            | Flaschen
+          th
+            | Preis
+          th
+            | Abgeschickt?
+          th
+          th.hidden-sm.hidden-xs
+          th.hidden-sm.hidden-xs
+      tbody
+        - @orders.each do | order |
+          tr
+            td
+              = order.customer.full_name
+            td
+              = order.wine.name
+            td
+              = order.boxes
+            td
+              = order.bottles
+            td
+              = number_to_currency(order.full_price, unit: '€')
+            td
+              - if order.shipped?
+                span.glyphicon.glyphicon-ok
+              - else
+                span.glyphicon.glyphicon-remove
 
-          td.hidden-sm.hidden-xs
-            = link_to order
-              span.glyphicon.glyphicon-eye-open 
-              = ' Anzeigen'
-          td.hidden-sm.hidden-xs
-            = link_to edit_order_path(order) 
-              span.glyphicon.glyphicon-pencil
-              = ' Bearbeiten'  
-          td.hidden-sm.hidden-xs
-            = link_to order, method: :delete, data: { confirm: 'Bist du sicher?' } 
-              span.glyphicon.glyphicon-trash 
-              = ' Löschen'
+            td.hidden-sm.hidden-xs
+              = link_to order
+                span.glyphicon.glyphicon-eye-open 
+                = ' Anzeigen'
+            td.hidden-sm.hidden-xs
+              = link_to edit_order_path(order) 
+                span.glyphicon.glyphicon-pencil
+                = ' Bearbeiten'  
+            td.hidden-sm.hidden-xs
+              = link_to order, method: :delete, data: { confirm: 'Bist du sicher?' } 
+                span.glyphicon.glyphicon-trash 
+                = ' Löschen'
 
-          td.visible-sm.visible-xs
-            .dropdown
-              a.dropdown-toggle data-toggle='dropdown' aria-haspopup='true'
-                span.caret
+            td.visible-sm.visible-xs
+              .dropdown
+                a.dropdown-toggle data-toggle='dropdown' aria-haspopup='true'
+                  span.caret
 
-              ul.dropdown-menu.dropdown-menu-right
-                li
-                  = link_to order
-                    span.glyphicon.glyphicon-eye-open 
-                    = ' Anzeigen'
-                li
-                  = link_to edit_order_path(order) 
-                    span.glyphicon.glyphicon-pencil
-                    = ' Bearbeiten'  
-                li
-                  = link_to order, method: :delete, data: { confirm: 'Are you sure?' } 
-                    span.glyphicon.glyphicon-trash 
-                    = ' Löschen'
+                ul.dropdown-menu.dropdown-menu-right
+                  li
+                    = link_to order
+                      span.glyphicon.glyphicon-eye-open 
+                      = ' Anzeigen'
+                  li
+                    = link_to edit_order_path(order) 
+                      span.glyphicon.glyphicon-pencil
+                      = ' Bearbeiten'  
+                  li
+                    = link_to order, method: :delete, data: { confirm: 'Are you sure?' } 
+                      span.glyphicon.glyphicon-trash 
+                      = ' Löschen'
