--- a/app/views/wines/index.html.slim
+++ b/app/views/wines/index.html.slim
@@ -14,6 +14,8 @@
       thead
         tr
           th
+            | Wein Nr.
+          th
             | Name
           th
             | Vol.
@@ -33,6 +35,8 @@
       tbody
         - @wines.each do | wine |
           tr
+            td
+              = wine.id
             td
               = wine.name
             td
