Revert "Customer request: Use numbers for wines"
This reverts commit 8f8fb62109d8035c01a77d5dd6474f7c38c27fa8.

--- a/app/views/orders/show.html.slim
+++ b/app/views/orders/show.html.slim
@@ -16,19 +16,15 @@ dl.dl-horizontal
   dd
     = @order.customer.full_name
   dt
-    | Wein:
+    | Weine:
   dd
     = @order.wine.name
   dt
-    | WeinNr:
-  dd
-    = @order.wine.id
-  dt
-    | Kartons:
+    | Boxes:
   dd
     = @order.boxes
   dt
-    | Flaschen:
+    | Bottles:
   dd
     = @order.bottles
   dt
